Fix shifting issue on landing section

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -325,6 +325,7 @@
 	
 	.banner-section{
 		margin-top: 80px;
+		height: 750px;
 		padding:200px 0px 200px;
 	}
 	
