--- a/css/style.css
+++ b/css/style.css
@@ -638,6 +638,7 @@ img {
   right: 15px;
   width: 50px;
   height: 50px;
+  border-radius: 5px;
   color: #ffffff;
   font-size: 24px;
   text-transform: uppercase;
@@ -1857,6 +1858,7 @@ img {
 
 .banner-section {
   position: relative;
+  height: 877px;
   padding: 100px 0px 473px;
   background-size: cover;
   /* background-image:url(/images/background/tinywow_space_background.png); */
